Fixing 60Hz bug
git-svn-id: svn+ssh://localhost/var/local/svn/menace@10 b7dc2feb-abe1-49e5-b0b8-892bdb346a61

--- a/src/Makefile
+++ b/src/Makefile
@@ -2,7 +2,7 @@
 AS=/usr/local/bin/tniasm
 SRC = menace.asm tnimsx1.asm 
 MSX = openmsx
-MSXFLAGS = -machine msx1
+MSXFLAGS = -machine turbor
 SR52 = ../tools/sr52pat
 PAT = patterns.pat
 SPR = ../tools/sr52spr
