Including explosion animation
git-svn-id: svn+ssh://localhost/var/local/svn/menace@20 b7dc2feb-abe1-49e5-b0b8-892bdb346a61

--- a/src/Makefile
+++ b/src/Makefile
@@ -24,7 +24,7 @@ deps:
 	files=`grep include menace.asm | cut -d'"' -f2` ; \
 	for i in  $$files; do \
 	  if [ -f $$i ]; then \
-	     echo menace.rom: $$i >> deps ;\
+	     echo menace.rom: $$i >> depsy ;\
 	  else \
 	     tmp=`which tniasm.linux`;echo menace.rom: `dirname $$tmp`/$$i >> deps ;\
 	  fi ; \
