Fixing some bugs in patterns generation
git-svn-id: svn+ssh://localhost/var/local/svn/menace@66 b7dc2feb-abe1-49e5-b0b8-892bdb346a61

--- a/src/Makefile
+++ b/src/Makefile
@@ -77,10 +77,14 @@ deps:
 	rm -f `dirname $<`/$*.pat
 
 
+intro.col intro.pat: ../sc2/intro.sc2
+	dd if=../sc2/intro.sc2 of=intro.pat bs=1 count=1328 skip=7
+	dd if=../sc2/intro.sc2 of=intro.col bs=1 count=1328 skip=8199
+
 
 %.pat %.col: %.sc2
-	dd if=`dirname $<`/$*.sc2 of=$*.pat bs=1 count=6144
-	dd if=`dirname $<`/$*.sc2 of=$*.col bs=1 count=6144 skip=8192
+	dd if=`dirname $<`/$*.sc2 of=$*.pat bs=1 count=2048 skip=7
+	dd if=`dirname $<`/$*.sc2 of=$*.col bs=1 count=2048 skip=8199
 
 
 
