Changing Alien Menace.pt3 to Alien_Menace.pt3
git-svn-id: svn+ssh://localhost/var/local/svn/menace@93 b7dc2feb-abe1-49e5-b0b8-892bdb346a61

--- a/src/Makefile
+++ b/src/Makefile
@@ -3,9 +3,9 @@ AS=/usr/local/bin/tniasm
 SRC = menace.asm tnimsx1.asm
 MSX = openmsx
 MSXFLAGS = -machine turbor -ext debugdevice
-SR52 = ../tools/sr52pat
+SR52 = wine ../tools/sr52pat.exe
 PAT = patterns.pat
-SPR = ../tools/sr52spr
+SPR = wine ../tools/sr52spr.exe
 TCF = wine ../tools/tcpack.exe
 VPATH = ../sc5 ../sc2 ../data
 
